[package]
name = "actix_postgresql_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4"] }
